[project]
name = "edenmarco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "langchain>=1.2.14",
    "langchain-openai>=1.1.12",
    "python-dotenv>=1.2.2",
    "tavily>=1.1.0",
]
