[project]
name = "edenmarco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "langchain>=1.2.14",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.1.12",
    "langsmith>=0.7.24",
    "python-dotenv>=1.2.2",
    "tavily>=1.1.0",
]
